Finally fix the wrap issue on headlines

--- a/football/base/css/index.css
+++ b/football/base/css/index.css
@@ -8,6 +8,10 @@ li {
     white-space: nowrap;
 }
 
+.headline {
+    white-space: normal;
+}
+
 .gameBox {
     background-color: #eeeeee;
     font-size: 10pt;
